@@ -13,7 +13,6 @@ import net.minecraft.client.renderer.MultiBufferSource;
 import net.minecraft.client.renderer.RenderType;
 import net.minecraft.client.renderer.blockentity.BlockEntityRenderer;
 import net.minecraft.client.renderer.blockentity.BlockEntityRendererProvider;
-import net.minecraft.client.renderer.texture.TextureAtlas;
 import net.minecraft.client.resources.language.I18n;
 import net.minecraft.client.resources.model.Material;
 import net.minecraft.core.BlockPos;
@@ -21,6 +20,7 @@ import net.minecraft.core.Direction;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.util.FastColor;
 import net.minecraft.util.Mth;
+import net.minecraft.world.inventory.InventoryMenu;
 import net.minecraft.world.phys.BlockHitResult;
 import net.minecraft.world.phys.HitResult;
 import net.minecraft.world.phys.Vec3;
@@ -34,10 +34,10 @@ import javax.annotation.ParametersAreNonnullByDefault;
 
 @ParametersAreNonnullByDefault
 public class ScrollRenderer implements BlockEntityRenderer<ScrollTile> {
-    public static final Material material = new Material(TextureAtlas.LOCATION_BLOCKS, new ResourceLocation(TetraMod.MOD_ID, "block/scroll"));
+    public static final Material material = new Material(InventoryMenu.BLOCK_ATLAS, ResourceLocation.fromNamespaceAndPath(TetraMod.MOD_ID, "block/scroll"));
     private static final int availableGlyphs = 16;
     private static final int availableMaterials = 3;
-    public static ModelLayerLocation layer = new ModelLayerLocation(new ResourceLocation(TetraMod.MOD_ID, "block/scroll"), "main");
+    public static ModelLayerLocation layer = new ModelLayerLocation(ResourceLocation.fromNamespaceAndPath(TetraMod.MOD_ID, "block/scroll"), "main");
     private final ModelPart[] rolledModel;
     private final ModelPart ribbonModel;
     private final ModelPart[] wallModel;
@@ -116,7 +116,7 @@ public class ScrollRenderer implements BlockEntityRenderer<ScrollTile> {
 
     @Override
     public void render(ScrollTile tile, float partialTicks, PoseStack matrixStack, MultiBufferSource buffer, int combinedLight, int combinedOverlay) {
-        VertexConsumer vertexBuilder = material.buffer(buffer, rl -> RenderType.entityCutout(rl));
+        VertexConsumer vertexBuilder = material.buffer(buffer, RenderType::entityCutout);
 
 //        model.render(matrixStack, vertexBuilder, combinedLight, combinedOverlay);
 
@@ -154,6 +154,7 @@ public class ScrollRenderer implements BlockEntityRenderer<ScrollTile> {
                 matrixStack.translate(0, 0.55, 0.4);
                 drawLabel(scrolls[0], matrixStack, buffer, combinedLight);
             } else if (arrangement == ScrollBlock.Arrangement.open) {
+                if (Minecraft.getInstance().getCameraEntity() == null) return;
                 double angle = RotationHelper.getHorizontalAngle(Minecraft.getInstance().getCameraEntity().getEyePosition(partialTicks),
                         Vec3.atCenterOf(tile.getBlockPos()));
                 Quaternionf rotation = new Quaternionf(0.0F, 0.0F, 0.0F, 1.0F);
@@ -182,7 +183,13 @@ public class ScrollRenderer implements BlockEntityRenderer<ScrollTile> {
             float blue = FastColor.ARGB32.blue(scrolls[i].ribbon) / 255f;
 
             rolledModel[mat].render(matrixStack, vertexBuilder, combinedLight, combinedOverlay);
-            ribbonModel.render(matrixStack, vertexBuilder, combinedLight, combinedOverlay, red, green, blue, 1);
+            ribbonModel.render(
+                    matrixStack,
+                    vertexBuilder,
+                    combinedLight,
+                    combinedOverlay,
+                    FastColor.ARGB32.color(255, (int) (red * 255), (int) (green * 255), (int) (blue * 255))
+            );
 
             matrixStack.translate(0, 0, 0.25f); // 4px
 
@@ -234,15 +241,11 @@ public class ScrollRenderer implements BlockEntityRenderer<ScrollTile> {
     }
 
     private int getGlyphColor(int material) {
-        switch (material) {
-            case 2:
-                return 0xbfa12a;
-            case 1:
-                return 0x8f9bcc;
-            default:
-            case 0:
-                return 0x665f47;
-        }
+        return switch (material) {
+            case 2 -> 0xbfa12a;
+            case 1 -> 0x8f9bcc;
+            default -> 0x665f47;
+        };
     }
 
     private int getGlyph(ScrollData[] data, int index) {
@@ -250,8 +253,8 @@ public class ScrollRenderer implements BlockEntityRenderer<ScrollTile> {
             if (data[0].glyphs.size() > index) {
                 return Mth.clamp(data[0].glyphs.get(index), 0, availableGlyphs);
             }
-            if (data[0].glyphs.size() > 0) {
-                return Mth.clamp(data[0].glyphs.get(0), 0, availableGlyphs);
+            if (!data[0].glyphs.isEmpty()) {
+                return Mth.clamp(data[0].glyphs.getFirst(), 0, availableGlyphs);
             }
         }
         return 0;
@@ -266,7 +269,7 @@ public class ScrollRenderer implements BlockEntityRenderer<ScrollTile> {
 
     private boolean shouldDrawLabel(ScrollData[] scrolls, BlockPos pos) {
         HitResult mouseover = Minecraft.getInstance().hitResult;
-        return scrolls != null && scrolls.length > 0
+        return scrolls.length > 0
                 && mouseover != null && mouseover.getType() == HitResult.Type.BLOCK
                 && pos.equals(((BlockHitResult) mouseover).getBlockPos());
     }
